--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "react-app-rewired start",
-    "dev:polling": "CHOKIDAR_USEPOLLING='true' react-app-rewired start",
+    "start": "react-app-rewired start",
+    "start:polling": "CHOKIDAR_USEPOLLING='true' react-app-rewired start",
     "start:prod": "npx serve -s build",
     "build": "react-app-rewired build -c",
     "test": "react-app-rewired test",
@@ -22,6 +22,7 @@
     "antd": "^4.16.13",
     "axios": "0.21.1",
     "classnames": "2.3.1",
+    "font-awesome": "^4.7.0",
     "moment": "2.29.1",
     "query-string": "7.0.1",
     "rc-notification": "4.5.7",
