styling form signup signin and connect API

--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@hookform/resolvers": "2.8.3",
+    "@material-ui/icons": "^4.11.2",
     "@mui/material": "^5.1.0",
+    "alert": "^5.0.10",
     "antd": "^4.16.13",
-    "axios": "0.21.1",
+    "axios": "^0.21.1",
     "classnames": "2.3.1",
     "font-awesome": "^4.7.0",
     "moment": "2.29.1",
