--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "classnames": "2.3.1",
     "font-awesome": "^4.7.0",
     "moment": "2.29.1",
-    "query-string": "7.0.1",
+    "query-string": "^7.0.1",
     "rc-notification": "4.5.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -36,6 +36,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "react-svg": "14.0.17",
+    "react-webcam": "^6.0.0",
     "redux": "4.1.0",
     "redux-thunk": "2.4.0",
     "web-vitals": "2.1.0",
