--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@hookform/resolvers": "2.8.3",
     "@mui/material": "^5.1.0",
     "antd": "^4.16.13",
-    "axios": "0.21.1",
+    "axios": "^0.24.0",
+    "babel-loader": "8.1.0",
     "classnames": "2.3.1",
+    "css-loader": "^6.5.1",
     "font-awesome": "^4.7.0",
     "moment": "2.29.1",
     "query-string": "7.0.1",
@@ -36,6 +38,9 @@
     "react-svg": "14.0.17",
     "redux": "4.1.0",
     "redux-thunk": "2.4.0",
+    "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.1",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "2.1.0",
     "yup": "0.32.11"
   },
