--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 # Add env vars here
 # (Notes that data is given to client is never security enough)
 # Readmore: https://github.com/react-boilerplate/react-boilerplate/issues/1744#issuecomment-303112505
+DOMAIN=http://8409-222-252-111-207.ngrok.io
