--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-loader": "8.1.0",
     "classnames": "2.3.1",
     "css-loader": "^6.5.1",
+    "dotenv": "^10.0.0",
     "font-awesome": "^4.7.0",
     "moment": "2.29.1",
     "query-string": "7.0.1",
